Fixed item gallery issue: zoom-in is now enabled on mobile

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/itemGallery.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/itemGallery.less
@@ -1,5 +1,12 @@
 ﻿@import "variables.less";
 
+body.gallery-open {
+    position: fixed;
+    overflow: hidden;
+    max-height: 100vh;
+    width: 100%;
+}
+
 .gallery {
     display: none;
     position: fixed;
